--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
 
     <div class="hero">
       <img src="./original.png" alt="" />
-      <h2>Expert Home Tutoring Tailored to Individual Needs</h2>
+      <h2>ንውልቃዊ ድሌታት ዘማልአ ብ ክኢላታት ዝወሃብ ገዛ ንገዛ ትምህርቲ</h2>
       <p>
-        Discover the power of personalized education with our dedicated tutors.
-        by provide one-on-one support designed to help your child excel
-        academically and reach their full potential. Let’s unlock their success
-        together!
+        ሓይሊ ብሕታዊ ትምህርቲ ምስ ውፉያት መምህራንና ርኸቡ። ውላድኩም ብ ኣካዳምያዊ ብቕዓት ብሉጽ ንምግባር ዝተዳለወ ,
+        ሓደ ንሓደ ደገፍ ብምሃብ ብኣካዳሚያዊ ደረጃን ምሉእ ዓቕሞም ክበጽሑን ምዃኖም ይፍለጥ። ዓወቶም ንኽፈት ብሓባር!
       </p>
     </div>
 
@@ -52,32 +50,44 @@
       </div>
     </div> -->
     <div class="services">
-      <h2>Our Services</h2>
+      <h2>እንህቦም ግልጋሎት</h2>
       <div class="cards">
         <div class="card">
-          <img src="./logo.PNG" alt="" />
-          <h3>Home To Home Learning</h3>
-          <p>experted teachers to help your students</p>
+          <img src="./homeLogo.png" alt="" />
+          <h3>ገዛ ን ገዛ ትምህርቲ</h3>
+          <p>ብክኢላታት መምህራን ዝተሓገዘ ገዛ ንገዛ ቲምህርቲ</p>
+        </div>
+        <div class="card">
+          <img src="./exam.png" alt="" />
+          <h3>ተምሃሮ ንፈተና ዝግጁ ምግባር</h3>
+          <p>ተምሃሮ ብ ክልላዊን ብሐራዊን ዝወሃቦም ፈተና ዝጉጁ ምግባር</p>
         </div>
         <div class="card">
           <img src="./logo.PNG" alt="" />
-          <h3>Home To Home Learning</h3>
-          <p>experted teachers to help your students</p>
+          <h3>ኣሳይመንት ፕሮጀችት ሓገዝ</h3>
+          <p>ን ተምሃሮ ዝወሃብ ኣሳይመንትን ፕሮጀችትን ንክሰርሑ ዘክእል ዓቕሚ ምፍጣር</p>
         </div>
         <div class="card">
           <img src="./logo.PNG" alt="" />
-          <h3>Home To Home Learning</h3>
-          <p>experted teachers to help your students</p>
+          <h3>መሠረታዊ ናይ ኮምፒውተር ክእለታት</h3>
+          <p>ንተማሃሮ ኣገደስቲ፣ ተግባራውን መሰረታውን ክእለት ኮምፒተር ንክህልዎም ምግባር</p>
+        </div>
+        <div class="card">
+          <img src="./logo.PNG" alt="" />
+          <h3>ኔትዎትክ ኢንስታሌሽን</h3>
+          <p>ንድርጅታትን ትካላትን ዘተኣማምን፣ ውሑስን ስሉጥን ኔትዎርክ ዝርግሐ</p>
+        </div>
+        <div class="card">
+          <img src="./logo.PNG" alt="" />
+          <h3>አሌክትሪክ ዝርገሐ</h3>
+          <p>ንድርጅታትን ትካላትን ሞያዊ፣ ልክዕን ዘተኣማምንን አሌክትሪክ ዝርገሐ</p>
         </div>
       </div>
     </div>
 
     <div class="testimonial">
-      <h1>Home</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-        voluptatum, soluta illum veritatis nostrum vero!
-      </p>
+      <h2>ን ምዝገባ ቀዳሞት ይኩኑ</h2>
+      <p>ን ደቆም ተመራጺ ዝኮነ ገዛ ን ገዛ ትምህርቲ የመዝግብዎም። ብ ሓደ ኮይኒና ምስ ደቆም ንቅድሚት ንገስግስ</p>
     </div>
 
     <!-- team members -->
@@ -86,96 +96,81 @@
       <h2>Our Members</h2>
       <div class="cards">
         <div class="card">
-          <img src="./1.png" alt="" />
+          <img src="./dave.jpg" alt="" />
           <div class="description">
-            <h3>Name</h3>
+            <h3>ሰምሃል ኣፅብሃ</h3>
             <p>position</p>
+            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
           </div>
         </div>
         <div class="card">
           <img src="./Tutor1.jpg" alt="" />
           <div class="description">
-            <h3>Name</h3>
+            <h3>ክብሮም ኣርኣያ</h3>
             <p>position</p>
+            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
           </div>
         </div>
         <div class="card">
           <img src="./1.png" alt="" />
           <div class="description">
-            <h3>Name</h3>
+            <h3>ቢንያም ገብረዮውሃንስ</h3>
             <p>position</p>
+            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
           </div>
         </div>
         <div class="card">
           <img src="./homeTutor.jpg" alt="" />
           <div class="description">
-            <h3>Name</h3>
+            <h3>ሃይለማሪያም መድሂን</h3>
             <p>position</p>
+            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
           </div>
         </div>
         <div class="card">
           <img src="./Tutor1.jpg" alt="" />
           <div class="description">
-            <h3>Name</h3>
+            <h3>ቁዱስ ዘርኣብሩክ</h3>
             <p>position</p>
+            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
           </div>
         </div>
         <div class="card">
           <img src="./1.png" alt="" />
           <div class="description">
-            <h3>Name</h3>
+            <h3>ዳዊት ገብረጻዲቅ</h3>
             <p>position</p>
+            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
           </div>
         </div>
       </div>
     </div>
 
     <!-- contact -->
-    <div class="testimonial" style="margin-bottom: 0">
-      <h1>Home</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-        voluptatum, soluta illum veritatis nostrum vero!
-      </p>
-    </div>
+    <div class="contact-us" style="margin-bottom: 0">
+      <h2>Contact Us</h2>
 
+      <p>
+        ንውላድኩም ብኸመይ ክንሕግዘልኩም ከም እንኽእል ንምዝታይንን ንትደልይዎ ሓበረታ ንምርካብ ብኢመይል ኣድራሻና ወይ
+        ድማ ይደውሉልና
+      </p>
+      <button>መርበብ ሓበረታና</button>
+      <span><i class="fa-solid fa-phone"></i> (251) 909090909</span>
+    </div>
+    <!-- footer -->
     <footer class="section-p1">
       <div class="col">
-        <img class="logo" src="./logo.PNG" alt="logo" />
-        <h4>Contact</h4>
-        <p><strong>Address :</strong>mekelle ,tigray ,Eth</p>
-        <p><strong>Phone :</strong> 0966969020</p>
-        <p><strong>Hours :</strong> 10:00 - 18:00, Mon -Sat</p>
-        <div class="follow">
-          <h4>Follow Us</h4>
-          <div class="icon">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-pinterest"></i>
-            <i class="fa-brands fa-youtube"></i>
-          </div>
-        </div>
+        <p><strong> ኣድራሻ :</strong>መቐለ, ትግራይ, አትዮጵያ</p>
+        <p><strong> ስልኪ ቁፅሪ :</strong> 0966969020</p>
+        <p><strong> ኢመይል :</strong> Homewise@edu.et</p>
       </div>
-
-      <div class="col">
-        <h4>About</h4>
-        <a href="#">About Us</a>
-        <a href="#">Delivery Information</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Term and Conditions</a>
-        <a href="#">Contact Us</a>
+      <div class="follow">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-youtube"></i>
       </div>
-
-      <div class="col">
-        <h4>My Acount</h4>
-        <a href="#">Sign In</a>
-        <a href="#">View Cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Track My Order</a>
-        <a href="#">Help</a>
-      </div>
-
       <div class="copyright">
         <p>@ 2021, Right reserved</p>
       </div>
