Update home wise tutor with react

--- a/index.html
+++ b/index.html
@@ -3,185 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Wise Tutor</title>
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/78e90c8d77.js"
-      crossorigin="anonymous"
-    ></script>
+    <title>Home-Wise</title>
   </head>
   <body>
-    <div class="header" id="home">
-      <div class="logo">
-        <img src="./images/logo.PNG" alt="" />
-        <h1>Home Wise Tutor</h1>
-      </div>
-      <div class="nav">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#service">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="hero">
-      <img src="./images//original.png" alt="" />
-      <h2>ንውልቃዊ ድሌታት ዘማልአ ብ ክኢላታት ዝወሃብ ገዛ ንገዛ ትምህርቲ</h2>
-      <p>
-        ፅረት ዝሓለወ ትምህርቲ ብ ውፉያት መምህራንና ይርኸቡ። ውላድኩም ብ ኣካዳምያዊ ብቕዓት ብዘለዎም መማህራን ተሓጊዞም
-        ብሉፃት ኮይኖም ክርከንቡ ንምግባር ዝተዳለወ ፣ ናይ ገዛ ንገዛ ትምህርቲ የመዝግብዎም ።
-      </p>
-    </div>
-
-    <!-- about-us -->
-    <section class="about-us" id="about">
-      <div class="title">
-        <h2>ብዛዕባና ዝምልከት</h2>
-      </div>
-      <div class="container">
-        <div class="about">
-          <h2>እንኻዕ ናብ መርበብ ሓበሬታና ብደሓን መፁ</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eum
-            voluptatum quaerat iure aliquid ab laudantium similique qui sunt
-            mollitia possimus amet corporis soluta excepturi ipsam non, voluptas
-            unde? Laboriosam?
-          </p>
-          <button>Learn More</button>
-        </div>
-        <div class="about-image">
-          <img src="./images/aboutt.jpg" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <div class="services" id="service">
-      <h2>እንህቦም ግልጋሎት</h2>
-      <div class="cards">
-        <div class="card">
-          <img src="./images/homeLogo.png" alt="" />
-          <h3>ገዛ ን ገዛ ትምህርቲ</h3>
-          <p>ብክኢላታት መምህራን ዝተሓገዘ ገዛ ንገዛ ቲምህርቲ</p>
-        </div>
-        <div class="card">
-          <img src="./images/fetenan.png" alt="" />
-          <h3>ተምሃሮ ንፈተና ድልዋት ምግባር</h3>
-          <p>ተምሃሮ ብ ክልላዊን ብሐራዊን ዝወሃቦም ፈተና ድልዋት ምግባር</p>
-        </div>
-        <div class="card">
-          <img src="./images/collage.png" alt="" />
-          <h3>ኣሳይመንት ፕሮጀችት ሓገዝ</h3>
-          <p>ን ተምሃሮ ዝወሃብ ኣሳይመንትን ፕሮጀችትን ንክሰርሑ ዘክእል ዓቕሚ ምፍጣር</p>
-        </div>
-        <div class="card">
-          <img src="./images/computer.png" alt="" />
-          <h3>መሠረታዊ ናይ ኮምፒውተር ክእለታት</h3>
-          <p>ንተማሃሮ ኣገደስቲ፣ ተግባራውን መሰረታውን ክእለት ኮምፒተር ንክህልዎም ምግባር</p>
-        </div>
-        <div class="card">
-          <img src="./images/nttk.png" alt="" />
-          <h3>ኔትዎትክ ኢንስታሌሽን</h3>
-          <p>ንድርጅታትን ትካላትን ዘተኣማምን፣ ውሑስን ስሉጥን ኔትዎርክ ዝርግሐ</p>
-        </div>
-        <div class="card">
-          <img src="./images/electric (2).png" alt="" />
-          <h3>አሌክትሪክ ዝርገሐ</h3>
-          <p>ንድርጅታትን ትካላትን ሞያዊ፣ ልክዕን ዘተኣማምንን አሌክትሪክ ዝርገሐ</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="testimonial">
-      <h2>ን ምዝገባ ቀዳሞት ይኩኑ</h2>
-      <p>ን ደቆም ተመራጺ ዝኮነ ገዛ ን ገዛ ትምህርቲ የመዝግብዎም። ብ ሓደ ኮይኒና ምስ ደቆም ንቅድሚት ንገስግስ</p>
-    </div>
-
-    <!-- team members -->
-
-    <div class="teams">
-      <h2>Our Members</h2>
-      <div class="cards">
-        <div class="card">
-          <img src="./dave.jpg" alt="" />
-          <div class="description">
-            <h3>ሰምሃል ኣፅብሃ</h3>
-            <p>position</p>
-            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./Tutor1.jpg" alt="" />
-          <div class="description">
-            <h3>ክብሮም ኣርኣያ</h3>
-            <p>position</p>
-            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./1.png" alt="" />
-          <div class="description">
-            <h3>ቢንያም ገብረዮውሃንስ</h3>
-            <p>position</p>
-            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./homeTutor.jpg" alt="" />
-          <div class="description">
-            <h3>ሃይለማሪያም መድሂን</h3>
-            <p>position</p>
-            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./Tutor1.jpg" alt="" />
-          <div class="description">
-            <h3>ቁዱስ ዘርኣብሩክ</h3>
-            <p>position</p>
-            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/dave.jpg" alt="" />
-          <div class="description">
-            <h3>ዳዊት ገብረጻዲቅ</h3>
-            <p>position</p>
-            <p><i class="fa-solid fa-phone"></i> +2519141212</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- contact -->
-    <div class="contact-us" style="margin-bottom: 0" id="contact">
-      <h2>Contact Us</h2>
-
-      <p>
-        ንውላድኩም ብኸመይ ክንሕግዘልኩም ከም እንኽእል ንምዝታይንን ንትደልይዎ ሓበረታ ንምርካብ ብኢመይል ኣድራሻና ወይ
-        ድማ ይደውሉልና
-      </p>
-      <button>መርበብ ሓበረታና</button>
-      <span><i class="fa-solid fa-phone"></i> (251) 909090909</span>
-    </div>
-    <!-- footer -->
-    <footer class="section-p1">
-      <div class="col">
-        <p><strong> ኣድራሻ :</strong>መቐለ, ትግራይ, አትዮጵያ</p>
-        <p><strong> ስልኪ ቁፅሪ :</strong> 0966969020</p>
-        <p><strong> ኢመይል :</strong> Homewise@edu.et</p>
-      </div>
-      <div class="follow">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-pinterest"></i>
-        <i class="fa-brands fa-youtube"></i>
-      </div>
-      <div class="copyright">
-        <p>@ 2021, Right reserved</p>
-      </div>
-    </footer>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
